gearset/main/default/objects/ObjectWithComponents__c/ObjectWithComponents__c.object-meta.xml
<CustomObject>
    <description>related to https://github.com/Gearset/salesforce-compare/pull/4938</description>
    <label>ObjectWithComponents</label>
    <nameField>
        <label>ObjectWithComponents Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ObjectWithComponentss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>ASharingReasonAA__c</fullName>
        <label>ASharingReason</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>ASharingReason__c</fullName>
        <label>ASharingReason</label>
    </sharingReasons>
</CustomObject>