gearset/main/default/objects/ObjectWithComponents__c/fields/EditedCustomField__c.field-meta.xml
<CustomField>
        <fullName>EditedCustomField__c</fullName>
        <label>EditedCustomField</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>