gearset/main/default/objects/ObjectWithComponents__c/fields/ManyEditsCustomField__c.field-meta.xml
<CustomField>
    <fullName>ManyEditsCustomField__c</fullName>
    <description>Some Description</description>
    <label>ManyEditsCustomField</label>
    <length>100</length>
    <type>Text</type>
</CustomField>