gearset/main/default/objects/ObjectWithComponents__c/fields/NewCustomField__c.field-meta.xml
<CustomField>
    <fullName>NewCustomField__c</fullName>
    <label>NewCustomField</label>
    <length>90</length>
    <type>Text</type>
</CustomField>