gearset/main/default/objects/ObjectWithComponents__c/fields/UnchangedCustomField__c.field-meta.xml
<CustomField>
    <fullName>UnchangedCustomField__c</fullName>
    <label>UnchangedCustomField</label>
    <length>100</length>
    <type>Text</type>
</CustomField>