gearset/main/default/objects/ObjectWithComponents__c/recordTypes/ARecordType.recordType-meta.xml
<RecordType>
    <fullName>ARecordType</fullName>
    <active>true</active>
    <label>ARecordType</label>
</RecordType>