gearset/main/default/objects/ObjectWithComponents__c/validationRules/AValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>AValidationRule</fullName>
    <active>true</active>
    <errorConditionFormula>1 &lt; 0</errorConditionFormula>
    <errorMessage>An error message</errorMessage>
</ValidationRule>